--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
     left: 0px;
     height: 56px;
     width: 56px;
-    background-image: url('../img/omiLogo_32_dark.png');
+    background-image: url('../img/opsbridge-inverse--32.svg');
     background-position: 12px 12px;
     background-repeat: no-repeat;
     background-attachment: fixed;
